[project]
name = "lc-deepagents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepagents>=0.6.12",
    "ipykernel>=7.3.0",
    "langchain>=1.3.14",
    "langchain-groq>=1.1.3",
    "langchain-openai>=1.3.5",
    "langchain-quickjs>=0.3.3",
    "python-dotenv>=1.2.2",
    "tavily-python>=0.7.26",
]
